--- a/n-cube.vcxproj.filters
+++ b/n-cube.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClInclude Include="src\array_tools.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Cube.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
