--- a/n-cube.vcxproj
+++ b/n-cube.vcxproj
@@ -21,6 +21,8 @@
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="data\npn1.txt" />
+    <Text Include="data\npn2.txt" />
     <Text Include="data\npn3.txt" />
     <Text Include="data\npn4.txt" />
     <Text Include="data\npn5.txt" />
