--- a/n-cube.vcxproj.filters
+++ b/n-cube.vcxproj.filters
@@ -65,6 +65,18 @@
     <ClInclude Include="cube\BF.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="cube\transform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cube\reflect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cube\rotate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cube\Transformations.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
