--- a/n-cube.vcxproj
+++ b/n-cube.vcxproj
@@ -19,24 +19,25 @@
     <Text Include="notes.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="cube\array_tools.h" />
-    <ClInclude Include="cube\BF.h" />
-    <ClInclude Include="cube\bf_tools.h" />
-    <ClInclude Include="cube\constants.h" />
-    <ClInclude Include="cube\CubeI.h" />
-    <ClInclude Include="cube\n_cube.h" />
-    <ClInclude Include="cube\plot_class.h" />
-    <ClInclude Include="cube\prime.h" />
-    <ClInclude Include="cube\reachable.h" />
-    <ClInclude Include="cube\reflect.h" />
-    <ClInclude Include="cube\rewrite.h" />
-    <ClInclude Include="cube\rotate.h" />
-    <ClInclude Include="cube\timing.h" />
-    <ClInclude Include="cube\transform.h" />
-    <ClInclude Include="cube\Transformations.h" />
+    <ClCompile Include="array_tools.ixx" />
+    <ClCompile Include="BF.ixx" />
+    <ClCompile Include="bf_tools.ixx" />
+    <ClCompile Include="constants.ixx" />
+    <ClCompile Include="CubeIndex.ixx" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="n_cube.ixx" />
+    <ClCompile Include="plot_class.ixx" />
+    <ClCompile Include="prime.ixx" />
+    <ClCompile Include="reachable.ixx" />
+    <ClCompile Include="reflect.ixx" />
+    <ClCompile Include="rewrite.ixx" />
+    <ClCompile Include="rotate.ixx" />
+    <ClCompile Include="timing.ixx" />
+    <ClCompile Include="transform.ixx" />
+    <ClCompile Include="Transformations.ixx" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp" />
+    <ClInclude Include="CubeDef.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -47,12 +48,12 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
     <UseDebugLibraries>true</UseDebugLibraries>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
-    <PlatformToolset>v142</PlatformToolset>
+    <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -77,6 +78,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <AdditionalOptions>/constexpr:steps 20000000 %(AdditionalOptions)</AdditionalOptions>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
